Fixed weird header bug
- Made the gap in the header dissapear
- Made a middle ground when the header is not mobile view, but too small for normal desktop view

--- a/app/style/partials/_footer.css
+++ b/app/style/partials/_footer.css
@@ -3,7 +3,7 @@
     justify-content: space-around;
     /* position: absolute;
     bottom: 0; */
-    background-color: rgb(197, 103, 26);
+    background-color: #D16002;
     width: 100%;
     height: auto;
     padding: clamp(1rem, 0.286rem + 1.905vw, 2rem);
