--- a/app/style/partials/_header.css
+++ b/app/style/partials/_header.css
@@ -1,3 +1,14 @@
-nav{
-    background-color: #F57F20;
+@media screen and (max-width: 870px) {
+    header {
+        width: 100% !important;
+        margin: 0 !important;
+    }
+
+    nav {
+        border-radius: 0 !important;
+    }
+
+    .triangle-nav {
+        display: none !important;
+    }
 }
